@@ -717,6 +717,9 @@ SIDSE_M_LFO_NoOneShotChk
 	BRA_IFCLR PLUSW0, SID_I_LFO_MODE_CLKSYNC, ACCESS, SIDSE_M_LFO_NoClkSync
 SIDSE_M_LFO_ClkSync
 	BRA_IFCLR SID_SE_STATE, SID_SE_STATE_GLOBAL_CLK_EVENT, BANKED, SIDSE_M_LFO_NoClk_Cont
+	movf	SID_SE_GLOBAL_CLK_CTR, W, BANKED
+	andlw	0x0f
+	bnz	SIDSE_M_LFO_NoClk_Cont
 SIDSE_M_LFO_NoClkSync
 
 	;; increment 16bit counter by given rate
@@ -1145,7 +1148,11 @@ SIDSE_M_ENV
 	movlw	SID_Ix_M_Vx_ENV_MODE
 	BRA_IFCLR PLUSW0, SID_I_ENV_MODE_CLKSYNC, ACCESS, SIDSE_M_ENV_NoClkSync
 SIDSE_M_ENV_ClkSync
-	BRA_IFSET SID_SE_STATE, SID_SE_STATE_GLOBAL_CLK_EVENT, BANKED, SIDSE_M_ENV_ClkSync_Cont
+	BRA_IFCLR SID_SE_STATE, SID_SE_STATE_GLOBAL_CLK_EVENT, BANKED, SIDSE_M_ENV_ClkSync_Skp
+	movf	SID_SE_GLOBAL_CLK_CTR, W, BANKED
+	andlw	0x0f
+	bz	SIDSE_M_ENV_ClkSync_Cont
+SIDSE_M_ENV_ClkSync_Skp
 	;; transfer current ENV counter into MIOS_PARAMETER[12]
 	movff	POSTINC1, MIOS_PARAMETER1
 	movff	POSTDEC1, MIOS_PARAMETER2
